flex wrap fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,18 +149,18 @@ flex-direction: row;}
 .gallery1 {
     position: relative; padding: 10px;
     flex-direction: row-reverse; 
-    grid-gap: 20px
+    grid-gap: 20px; flex-wrap: wrap; 
 }
 
 .gallery2 {
     position: relative; padding: 10px;
     flex-direction: row-reverse; 
-    grid-gap: 20px
+    grid-gap: 20px ; flex-wrap: wrap;
 }
 .galleryimg {
     display: flex; width: 100%; height: 450px;
     border: solid 5 px var(--primary-color);
-    padding: 5px
+    padding: 5px; flex-wrap: wrap; 
 }
 
 
